--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.4.0",
+    "@neondatabase/serverless": "^0.10.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.61.0",
